--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
     <header>
       <div class="container">
         <div class="logo">
-          <a href="#"><img src="./images/Logo.svg" alt="bejamas logo" /></a>
+          <a href="./index.html"
+            ><img src="./images/Logo.svg" alt="bejamas logo"
+          /></a>
         </div>
         <div class="cart">
           <a href="./cart-page.html">
