Alt School V3 Project

--- a/cart-page.html
+++ b/cart-page.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="logo">
           <a href="./index.html"
-            ><img src="./images/Logo.svg" alt="bejamas logo"
+            ><img src="./images/Logo.jpg" alt="bejamas logo"
           /></a>
         </div>
         <div class="cart">
@@ -51,7 +51,7 @@
 
               <div>
                 <img
-                  src="./images/pexels-background-small.svg"
+                  src="./images/pexels-background-small.jpg"
                   alt="pexels-background"
                 />
               </div>
@@ -61,7 +61,7 @@
         </div>
 
         <div class="sub-header-image">
-          <img src="./images/pexels-background.svg" alt="pexels-background" />
+          <img src="./images/pexel-background.jpg" alt="pexels-background" />
 
           <a href="#" class="btn btn-secondary text-sm">Photo of the day</a>
         </div>
@@ -99,9 +99,9 @@
 
         <div class="pet-detail">
           <div class="pet-detail-images">
-            <img src="./images/Rectangle 10.svg" alt="Rectangle-image-01" />
-            <img src="./images/Rectangle 10.1.svg" alt="Rectangle-image-02" />
-            <img src="./images/Rectangle 10.2.svg" alt="Rectangle-image-03" />
+            <img src="./images/Rectangle10.1.jpg" alt="Rectangle-image-01" />
+            <img src="./images/Rectangle10.2.jpg" alt="Rectangle-image-02" />
+            <img src="./images/Rectangle10.3.jpg" alt="Rectangle-image-03" />
           </div>
 
           <div class="pet-detail-content">
@@ -121,7 +121,7 @@
 
         <div class="sub-header-image">
           <img
-            src="./images/pexels-background-small.png"
+            src="./images/pexel-background-mobile.jpg"
             alt="pexels-background"
           />
 
@@ -138,9 +138,9 @@
         <h1 class="text-md">People also buy</h1>
         <div class="pet-detail">
           <div class="pet-detail-images">
-            <img src="./images/Rectangle 10.svg" alt="Rectangle-image-01" />
-            <img src="./images/Rectangle 10.1.svg" alt="Rectangle-image-02" />
-            <img src="./images/Rectangle 10.2.svg" alt="Rectangle-image-03" />
+            <img src="./images/Rectangle10.1.jpg" alt="Rectangle-image-01" />
+            <img src="./images/Rectangle10.2.jpg" alt="Rectangle-image-02" />
+            <img src="./images/Rectangle10.3.jpg" alt="Rectangle-image-03" />
           </div>
 
           <div class="pet-detail-content">
@@ -254,7 +254,7 @@
               <div class="shop-gallery-content">
                 <span class="btn btn-secondary">Best Seller</span>
                 <img
-                  src="./images/shopping-images/shop-image-01.png"
+                  src="./images/shopping-images/shop-image-01.jpg"
                   alt="shop-image-01"
                 />
                 <a href="#" class="btn btn-primary btn-block text-lg"
@@ -269,7 +269,7 @@
             <div class="shop-gallery-card">
               <div class="shop-gallery-content">
                 <img
-                  src="./images/shopping-images/shop-image-02.png"
+                  src="./images/shopping-images/shop-image-02.jpg"
                   alt="shop-image-01"
                 />
                 <a href="#" class="btn btn-primary btn-block text-lg"
@@ -284,7 +284,7 @@
             <div class="shop-gallery-card">
               <div class="shop-gallery-content">
                 <img
-                  src="./images/shopping-images/shop-image-02.png"
+                  src="./images/shopping-images/shop-image-02.jpg"
                   alt="shop-image-01"
                 />
                 <a href="#" class="btn btn-primary btn-block text-lg"
@@ -299,7 +299,7 @@
             <div class="shop-gallery-card">
               <div class="shop-gallery-content">
                 <img
-                  src="./images/shopping-images/shop-image-03.png"
+                  src="./images/shopping-images/shop-image-03.jpg"
                   alt="shop-image-01"
                 />
                 <a href="#" class="btn btn-primary btn-block text-lg"
@@ -314,7 +314,7 @@
             <div class="shop-gallery-card">
               <div class="shop-gallery-content">
                 <img
-                  src="./images/shopping-images/shop-image-04.png"
+                  src="./images/shopping-images/shop-image-04.jpg"
                   alt="shop-image-01"
                 />
                 <a href="#" class="btn btn-primary btn-block text-lg"
@@ -329,7 +329,7 @@
             <div class="shop-gallery-card">
               <div class="shop-gallery-content">
                 <img
-                  src="./images/shopping-images/shop-image-04.png"
+                  src="./images/shopping-images/shop-image-04.jpg"
                   alt="shop-image-01"
                 />
                 <a href="#" class="btn btn-primary btn-block text-lg"
