--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div class="container">
         <div class="logo">
           <a href="./index.html"
-            ><img src="./images/Logo.svg" alt="bejamas logo"
+            ><img src="./images/Logo.jpg" alt="bejamas logo"
           /></a>
         </div>
         <div class="cart">
@@ -43,7 +43,7 @@
         </div>
 
         <div class="sub-header-image">
-          <img src="./images/pexels-background.svg" alt="pexels-background" />
+          <img src="./images/pexel-background.jpg" alt="pexels-background" />
 
           <a href="#" class="btn btn-secondary text-sm">Photo of the day</a>
         </div>
@@ -81,9 +81,9 @@
 
         <div class="pet-detail">
           <div class="pet-detail-images">
-            <img src="./images/Rectangle 10.svg" alt="Rectangle-image-01" />
-            <img src="./images/Rectangle 10.1.svg" alt="Rectangle-image-02" />
-            <img src="./images/Rectangle 10.2.svg" alt="Rectangle-image-03" />
+            <img src="./images/Rectangle10.1.jpg" alt="Rectangle-image-01" />
+            <img src="./images/Rectangle10.2.jpg" alt="Rectangle-image-02" />
+            <img src="./images/Rectangle10.3.jpg" alt="Rectangle-image-03" />
           </div>
 
           <div class="pet-detail-content">
@@ -103,7 +103,7 @@
 
         <div class="sub-header-image">
           <img
-            src="./images/pexels-background-small.png"
+            src="./images/pexel-background-mobile.jpg"
             alt="pexels-background"
           />
 
@@ -120,9 +120,9 @@
         <h1 class="text-md">People also buy</h1>
         <div class="pet-detail">
           <div class="pet-detail-images">
-            <img src="./images/Rectangle 10.svg" alt="Rectangle-image-01" />
-            <img src="./images/Rectangle 10.1.svg" alt="Rectangle-image-02" />
-            <img src="./images/Rectangle 10.2.svg" alt="Rectangle-image-03" />
+            <img src="./images/Rectangle10.1.jpg" alt="Rectangle-image-01" />
+            <img src="./images/Rectangle10.2.jpg" alt="Rectangle-image-02" />
+            <img src="./images/Rectangle10.3.jpg" alt="Rectangle-image-03" />
           </div>
 
           <div class="pet-detail-content">
@@ -236,7 +236,7 @@
               <div class="shop-gallery-content">
                 <span class="btn btn-secondary">Best Seller</span>
                 <img
-                  src="./images/shopping-images/shop-image-01.png"
+                  src="./images/shopping-images/shop-image-01.jpg"
                   alt="shop-image-01"
                 />
                 <a href="#" class="btn btn-primary btn-block text-lg"
@@ -251,7 +251,7 @@
             <div class="shop-gallery-card">
               <div class="shop-gallery-content">
                 <img
-                  src="./images/shopping-images/shop-image-02.png"
+                  src="./images/shopping-images/shop-image-02.jpg"
                   alt="shop-image-01"
                 />
                 <a href="#" class="btn btn-primary btn-block text-lg"
@@ -266,7 +266,7 @@
             <div class="shop-gallery-card">
               <div class="shop-gallery-content">
                 <img
-                  src="./images/shopping-images/shop-image-02.png"
+                  src="./images/shopping-images/shop-image-02.jpg"
                   alt="shop-image-01"
                 />
                 <a href="#" class="btn btn-primary btn-block text-lg"
@@ -281,7 +281,7 @@
             <div class="shop-gallery-card">
               <div class="shop-gallery-content">
                 <img
-                  src="./images/shopping-images/shop-image-03.png"
+                  src="./images/shopping-images/shop-image-03.jpg"
                   alt="shop-image-01"
                 />
                 <a href="#" class="btn btn-primary btn-block text-lg"
@@ -296,7 +296,7 @@
             <div class="shop-gallery-card">
               <div class="shop-gallery-content">
                 <img
-                  src="./images/shopping-images/shop-image-04.png"
+                  src="./images/shopping-images/shop-image-04.jpg"
                   alt="shop-image-01"
                 />
                 <a href="#" class="btn btn-primary btn-block text-lg"
@@ -311,7 +311,7 @@
             <div class="shop-gallery-card">
               <div class="shop-gallery-content">
                 <img
-                  src="./images/shopping-images/shop-image-04.png"
+                  src="./images/shopping-images/shop-image-04.jpg"
                   alt="shop-image-01"
                 />
                 <a href="#" class="btn btn-primary btn-block text-lg"
